--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: 2.1.16
+  dio: ^2.1.16
   pull_to_refresh: ^1.5.6
+  crypto: ^2.0.6
+  flutter_webview_plugin: ^0.3.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
